--- a/WpfApp/Views/MainWindow.xaml
+++ b/WpfApp/Views/MainWindow.xaml
@@ -7,69 +7,57 @@
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
         Icon="/wwwroot/16c0f2e1fe54b8_16x16.ico"
-        Title="DICOM查看器" Height="650" Width="900">
+        Title="DICOM查看器" Height="700" Width="1100">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
     </Window.Resources>
 
     <Grid>
-        <ScrollViewer hc:ScrollViewerAttach.IsHoverResizingEnabled="False" hc:ScrollViewerAttach.AutoHide="False">
-            <Grid Margin="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="8" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="8" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="8" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="8" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="8" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
-                    <DockPanel>
-                        <Button Content="选择 DCM 文件" Command="{Binding BrowseCommand}" Style="{StaticResource ButtonDashed}" Width="120" Height="32" Margin="0,0,12,0" HorizontalAlignment="Left" />
-                        <TextBlock Text="已选文件：" VerticalAlignment="Center" Foreground="#444" />
-                        <TextBox Text="{Binding SelectedFileName}" IsReadOnly="True" VerticalAlignment="Center" Margin="8,0,0,0" Width="380"/>
+            <Border Grid.Row="0" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
+                <DockPanel>
+                    <Button Content="选择 DCM 文件" Command="{Binding BrowseCommand}" Style="{StaticResource ButtonDashed}" Width="120" Height="32" Margin="0,0,12,0" HorizontalAlignment="Left" />
+                    <TextBlock Text="已选文件：" VerticalAlignment="Center" Foreground="#444" />
+                    <TextBox Text="{Binding SelectedFileName}" IsReadOnly="True" VerticalAlignment="Center" Margin="8,0,0,0" Width="380"/>
+                    <Button Content="加载图像" Command="{Binding LoadImageCommand}" Style="{StaticResource ButtonDashedPrimary}" Width="70" Height="32" Margin="12,0,12,0" HorizontalAlignment="Left" />
+                    <Button Content="清空" Command="{Binding ClearCommand}" Width="70" Height="32" Margin="12,0,12,0" HorizontalAlignment="Left" />
+                </DockPanel>
+            </Border>
 
-                        <Button Content="加载图像" Command="{Binding LoadImageCommand}" Style="{StaticResource ButtonDashedPrimary}" Width="70" Height="32" Margin="12,0,12,0" HorizontalAlignment="Left" />
+            <Border Grid.Row="2" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-                        <Button Content="清空" Command="{Binding ClearCommand}" Width="70" Height="32" Margin="12,0,12,0" HorizontalAlignment="Left" />
-                    </DockPanel>
-                </Border>
+                    <TextBlock Text="文件基础信息" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
 
-                <Border Grid.Row="2" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
+                    <DataGrid Grid.Row="1" ItemsSource="{Binding FileBasic}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True" MaxHeight="150">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="属性" Binding="{Binding Key}" Width="200" />
+                            <DataGridTextColumn Header="值" Binding="{Binding Value}" Width="*" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </Border>
 
-                        <TextBlock Text="文件基础信息" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
+            <Grid Grid.Row="4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="12" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
 
-                        <DataGrid Grid.Row="1" ItemsSource="{Binding FileBasic}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True">
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Header="属性" Binding="{Binding Key}" Width="200" />
-                                <DataGridTextColumn Header="值" Binding="{Binding Value}" Width="*" />
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </Grid>
-                </Border>
-
-                <Border Grid.Row="4" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <TextBlock Text="图像预览" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
-
-                        <Border Grid.Row="1" Background="#F0F0F0" MinHeight="200" MaxHeight="500" CornerRadius="4">
-                            <Image Source="{Binding ImageSource}" Stretch="Uniform" Margin="5"/>
-                        </Border>
-                    </Grid>
-                </Border>
-
-                <Border Grid.Row="6" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
+                <Border Grid.Column="0" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -77,14 +65,14 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="DICOM 文件信息" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
+                        <TextBlock Text="DICOM 标签信息" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
 
                         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,0,0,8">
                             <Button Content="添加标签" Command="{Binding AddTagCommand}" Style="{StaticResource ButtonPrimary}" Width="80" Height="28" Margin="0,0,8,0" />
                             <Button Content="删除标签" Command="{Binding RemoveTagCommand}" CommandParameter="{Binding SelectedItem, ElementName=DicomGrid}" Style="{StaticResource ButtonDanger}" Width="80" Height="28" />
                         </StackPanel>
 
-                        <DataGrid x:Name="DicomGrid" Grid.Row="2" ItemsSource="{Binding DicomTags}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" IsSynchronizedWithCurrentItem="False" EnableRowVirtualization="False" EnableColumnVirtualization="False" Height="400">
+                        <DataGrid x:Name="DicomGrid" Grid.Row="2" ItemsSource="{Binding DicomTags}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" IsSynchronizedWithCurrentItem="False" EnableRowVirtualization="False" EnableColumnVirtualization="False">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Tag" Binding="{Binding Tag}" Width="120" IsReadOnly="True" />
                                 <DataGridTextColumn Header="标签" Binding="{Binding Label}" Width="200" IsReadOnly="True" />
@@ -93,8 +81,22 @@
                         </DataGrid>
                     </Grid>
                 </Border>
+
+                <Border Grid.Column="2" Padding="10" CornerRadius="6" Background="#FFF" BorderBrush="#FFE6E6E6" BorderThickness="1">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="图像预览" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,8" />
+
+                        <Border Grid.Row="1" Background="#F5F5F5" CornerRadius="4" ClipToBounds="True">
+                            <Image Source="{Binding ImageSource}" Stretch="Uniform" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </Grid>
+                </Border>
             </Grid>
-        </ScrollViewer>
+        </Grid>
 
         <Grid Visibility="{Binding IsBusy, Converter={StaticResource BoolToVis}}" Background="Transparent" Panel.ZIndex="999" Focusable="True" IsHitTestVisible="{Binding IsBusy}">
             <hc:LoadingCircle IsRunning="{Binding IsBusy}"/>
